--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>VIRTUAL REALITY</h2>
+							<p>"VR is a way to escape the real world into something more fantastic.<br />It has the potential to be the most social technology of all time."<br/><br/>-  Palmer Luckey, Founder of Oculus Rift</p>
 						</header>
 						<span class="image"><img src="images/pic1.jpg" alt="" /></span>
 					</div>
