--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/pic4.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Virtual Reality in Education</h2>
+							<p>Benefits, Tools, and Resources</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>The benefits of virtual reality in education are embraced by many educators, but some are still reluctant to use it in their classrooms. Reasons range from high costs to pushback from school administrators. Others see the value of both VR and AR as entertainment, but not as effective teaching tools in the classroom. Additional educator concerns, as reported in a recent EdTech report, include the bulkiness of the equipment, glitches, and the quality and availability of content.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://soeonline.american.edu/blog/benefits-of-virtual-reality-in-education" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
